# ww

./: .gitignore  .gitmodules  Cargo.toml  FFI_CrossReference_Report.md  regini-disable.bat
.github/workflows/: benchmarks.yml  bindings_ci.yml  ci.yml  coverage.yml  deny.yml  detect-long-path.yml  detect-unused-dependencies.yml  documentation.yml  fixup-block.yml  ios.yml  msrv.yaml  xtask.yml
.kiro/: settings.json
.workbuddy/memory/: 2026-06-06.md  2026-06-07.md  2026-06-10.md  架构分析报告-2026-06-06.md  测试重试成功报告-2026-06-06.md
bindings/matrix-sdk-ffi/: Cargo.toml
bindings/matrix-sdk-ffi/src/: client.rs  lib.rs  session_verification.rs  social_feed.rs
crates/matrix-sdk-webrtc/: Cargo.toml  README.md  libcall.rmeta  test_env.sh
crates/matrix-sdk-webrtc/examples/: call_integration.rs  e2e_signaling.rs  two_party_call.rs  two_party_media.rs
crates/matrix-sdk-webrtc/src/: call.rs  config.rs  connection.rs  error.rs  lib.rs  media.rs  media.rs.bak  media.rs.bak.old  mesh.rs  sealed.rs  signaling.rs  transport.rs
labs/social-feed/: API_CHANGES.md  Cargo.toml  Cargo.toml.tmp  OPTIMIZATION_SUMMARY.md  README.md  TESTING.md
labs/social-feed/src/: lib.rs
labs/social-feed/src/core/: feed.rs  helper.rs  interaction.rs  mod.rs  profile.rs  social.rs
labs/social-feed/src/services/: aggregation.rs  cache.rs  media.rs  mod.rs  pagination.rs  quote_forward.rs  rate_limit.rs  search.rs  search_index.rs  timeline.rs
labs/social-feed/src/tests/: edge_cases.rs  integration_advanced.rs  mod.rs  models.rs  social_feed_basic.rs  social_feed_interaction.rs
labs/social-feed/src/types/: config.rs  error.rs  mod.rs  models.rs
labs/social-feed/src/utils/: images.rs  mod.rs  text.rs  validators.rs
social-app-ios/: .gitignore  FFI_Audit_Report.md  Package.swift  README.md  TODO_FFI_AUDIT.md  project.yml
social-app-ios/FFI/matrix_sdk_base/: stub.c
social-app-ios/FFI/matrix_sdk_common/: stub.c
social-app-ios/FFI/matrix_sdk_crypto/: stub.c
social-app-ios/FFI/matrix_sdk_ui/: stub.c
social-app-ios/MatrixFFI/matrix_sdk/: stub.c
social-app-ios/MatrixFFI/matrix_sdk_base/: stub.c
social-app-ios/MatrixFFI/matrix_sdk_common/: stub.c
social-app-ios/UnitTests/: social-app-ios-进度评估报告.md
social-app-ios/docs/: APP_DESIGN.md  ARCHITECTURE_OPTIMIZATION.md  EXECUTION_REPORT.md  FFI_Architecture_Analysis.md  FFI_Audit_Report.md  GAP_ANALYSIS.md  LoginView-设计方案.md  VoIP通话界面-设计方案.md  compilation-fix-qrcodedata.md  directory-structure_20260608_193951_876.md  social-app-ios-ui-preview.html  social-app-ios-设计系统报告.md
social-app-ios/scripts/: generate_ffi.sh  generate_stubs.py
(+117 files in other folders)
