[package]
name = "social-feed"
version = "0.1.0"
edition = "2021"
description = "动态流模块 - 基于 Matrix 协议的社交动态功能封装"

[dependencies]
matrix-sdk = { path = "../../crates/matrix-sdk" }
matrix-sdk-ui = { path = "../../crates/matrix-sdk-ui" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
serde_json = "1"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockall = "0.12"
assert_matches = "1.5"
tracing-subscriber = "0.3"
serde_json = "1"